rns-lang/test_data/integration_to_be_migrated/error/parser/super_directive/multiple_def_with_diff_val.rns
.class public HelloWorld
.super java/lang/Object

.method public <init> ()V
   .code stack 10 locals 10
     aload_0
     invokespecial java/lang/Object <init> ()V
     return
   .end code
.end method

.super java/lang/String
